# EPI-s

./: LICENSE  MakeFile  README.md
Imersão5/: docker-compose.yml
ProTecHub/: pyproject.toml
ProTecHub/app/: admin.py  apps.py  signals.py  urls.py
ProTecHub/app/forms/: __init__.py  emprestimo.py  equipamento.py  historico.py  usuario.py
ProTecHub/app/migrations/: 0001_initial.py
ProTecHub/app/models/: emprestimo.py  equipamento.py  historico.py  usuario.py
ProTecHub/app/static/css/: style.css
ProTecHub/app/static/js/: script.js
ProTecHub/app/templates/global/: primary_base.html  secondary_base.html
ProTecHub/app/templates/pages/: cadastro.html  contato.html  home.html  login.html  sobre.html
ProTecHub/app/templates/pages/interno/: home.html
ProTecHub/app/templates/pages/interno/emprestimo/: atualizar_emprestimo.html  criar_emprestimo.html  listar_emprestimos.html
ProTecHub/app/templates/pages/interno/equipamento/: atualizar_equipamento.html  criar_equipamento.html  listar_equipamentos.html
ProTecHub/app/templates/pages/interno/historico/: atualizar_historico.html  criar_historico.html  listar_historico.html
ProTecHub/app/templates/pages/interno/usuario/: atualizar_usuario.html  criar_usuario.html  listar_usuarios.html
ProTecHub/app/templates/partial/: footer.html  primary_header.html  secondary_header.html  sidebar.html
ProTecHub/app/utils/: __init__.py  enums.py  utils.py
ProTecHub/app/views/: __init__.py  base.py  emprestimo.py  equipamento.py  historico.py  interno.py  outros.py  usuario.py
ProTecHub/projeto/: settings.py  urls.py
(+31 files in other folders)
